--- a/EcoDevView/package.json
+++ b/EcoDevView/package.json
@@ -8,6 +8,8 @@
         "gulp-tsc": "1.1.1",
         "run-sequence": "1.1.2",
         "rimraf": "2.4.3",
-        "tsd": "0.6.4"
+        "tsd": "0.6.4",
+
+        "angular2": "2.0.0-alpha.37"
     }
 }
